--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -33,22 +33,12 @@
                 <a href="{{ url_for('auth.admin_login_page') }}" class="text-[#49739c] dark:text-gray-400 hover:text-black dark:hover:text-white text-sm font-medium">Admin Login</a>
                 {% endif %}
             </nav>
-            <button id="theme-switcher" class="text-gray-600 dark:text-gray-400">
-                <svg id="theme-icon-dark" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-                </svg>
-                <svg id="theme-icon-light" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-                </svg>
-            </button>
         </div>
     </header>
     {% endblock %}
 
     <main class="gap-1 px-6 flex flex-1 justify-center py-5">
-        {% block content %}{}{% endblock %}
+        {% block content %}{% endblock %}
     </main>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
