--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - DineEase POS</title>
+    <title>{{ title }} - Restaurant Billing POS and Analytical Dashboard</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/dark_theme.css') }}">
@@ -20,7 +20,7 @@
             <div class="size-4">
                 <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 42.4379C4 42.4379 14.0962 36.0744 24 41.1692C35.0664 46.8624 44 42.2078 44 42.2078L44 7.01134C44 7.01134 35.068 11.6577 24.0031 5.96913C14.0971 0.876274 4 7.27094 4 7.27094L4 42.4379Z" fill="currentColor"></path></svg>
             </div>
-            <h2 class="text-[#0d141c] dark:text-gray-50 text-lg font-bold leading-tight tracking-[-0.015em]">DineEase POS</h2>
+            <h2 class="text-[#0d141c] dark:text-gray-50 text-lg font-bold leading-tight tracking-[-0.015em]">Restaurant Billing POS and Analytical Dashboard</h2>
         </a>
         <div class="flex flex-1 justify-end items-center gap-8">
              <nav class="flex space-x-4 items-center">
